--- a/styles/style.css
+++ b/styles/style.css
@@ -512,10 +512,16 @@ form {
   padding: 2px 0 0;
   border-radius: 50px;
 }
+.searchBox .searchButton .fa-search:hover {
+  color: #196c71;
+}
 .searchBox .searchButton:focus {
   outline: 2px solid #17a2aa;
 }
-.searchBox .fa-search:hover {
+.searchBox .searchButton:active {
+  outline: none;
+}
+.searchBox .searchButton:active .fa-search {
   color: #196c71;
 }
 .searchBox .rotateButton {
@@ -942,6 +948,21 @@ i.fa-grip-lines-vertical {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 20px;
+  }
+  header .navBox .modal {
+    top: 17%;
+    left: 63%;
+    height: 183px;
+    width: 151px;
+  }
+  header .navBox .modal .message {
+    font-size: 0.8rem;
+  }
+  header .navBox .modal .modalButton {
+    left: 20%;
+    top: 4%;
+    bottom: auto;
+    padding: 10px 16px 7px;
   }
 
   .searchBox {
